<resources>
    <string name="app_name">BudgetBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="possibleUsername">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789._-@</string>
    <string name="possibleName">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÑñ .</string>
    <string name="possibleAddress">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÑñ#0123456789,()/ .</string>
    <string name="possibleBirthday">0123456789/</string>
    <string name="possibleEmail">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz!#$%&amp;\'*+-/=?^_`{|}~.@</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="e_mail">E-Mail</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here!</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="php">PHP</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="savings_goal">Savings Goal</string>
    <string name="budget_goal">Budget Goal</string>
    <string name="lock">Lock</string>
    <string name="profile">Profile</string>
    <string name="accept_terms_and_conditions">I clearly understand and accept the Terms and Conditions.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_welcome">Welcome to Budget Buddy! These Terms and Conditions ("Terms") govern your use of the Budget Buddy mobile application ("App") provided by Budget Buddy Inc. By accessing or using our App, you agree to comply with and be bound by these Terms. If you do not agree with these Terms, please do not use the App.</string>
    <string name="back">Back</string>
    <string name="terms_1">1.\tAccount Registration</string>
    <string name="terms_1_content">To use certain features of the App, you may be required to register for an account. You agree to provide accurate, current, and complete information during the registration process and to update such information to keep it accurate, current, and complete.</string>
    <string name="terms_2">2.\tUsage and Restrictions</string>
    <string name="terms_2_content">You agree to use the App solely for its intended purpose, including setting savings goals, making deposits, and tracking your financial progress. Any unauthorized use or modification of the App is strictly prohibited.</string>
    <string name="terms_3">3.\tPrivacy Policy</string>
    <string name="terms_3_content">Your use of the App is also governed by our Privacy Policy. Please review our Privacy Policy to understand our practices concerning the collection, use, and disclosure of your personal information.</string>
    <string name="terms_4">4.\tFinancial Advice</string>
    <string name="terms_4_content">Budget Buddy is a tool for financial management, but it does not provide financial advice. The information provided by the App is for general informational purposes only. Consult with a qualified financial advisor for personalized advice tailored to your individual circumstances.</string>
    <string name="terms_5">5.\tSecurity</string>
    <string name="terms_5_content">You are responsible for maintaining the confidentiality of your account credentials. If you suspect any unauthorized access to your account, you must notify us immediately.</string>
    <string name="terms_6">6.\tIn-App Cash Out Restrictions</string>
    <string name="terms_6_content">The funds withdrawn through the in-app cash out feature are restricted for use within the Budget Buddy App and cannot be used for e-commerce transactions.</string>
    <string name="terms_7">7.\tUser Conduct</string>
    <string name="terms_7_content">You agree not to engage in any conduct that may disrupt or interfere with the functionality of the App or compromise its security.</string>
    <string name="terms_8">8.\tUpdates and Modifications</string>
    <string name="terms_8_content">We reserve the right to update, modify, or discontinue the App at any time without prior notice. You agree that we shall not be liable for any modification, suspension, or discontinuation of the App.</string>
    <string name="terms_9">9.\tTermination</string>
    <string name="terms_9_content">We reserve the right to terminate or suspend your access to the App, at our sole discretion, without prior notice or liability, for any reason.</string>
    <string name="terms_10">10.\tGoverning Law</string>
    <string name="terms_10_content">These Terms are governed by and construed in accordance with the laws of the Philippine republic.</string>
    <string name="terms_11">11.\tContact Information</string>
    <string name="terms_11_content">If you have any questions or concerns regarding these Terms, please contact us at budgetbuddy@gmail.com.</string>
    <string name="terms_outro">By using the Budget Buddy App, you acknowledge that you have read, understood, and agree to be bound by these Terms and our Privacy Policy. These Terms constitute a binding agreement between you and Budget Buddy Inc.</string>
    <string name="full_name">Full Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="account_manager">Account Manager</string>
    <string name="log_out">Log-out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="history">History</string>
    <string name="lock_savings">Lock Savings</string>
    <string name="lock_description">Lock your savings to prevent yourself from spending it.</string>
    <string name="budget_goal_description">Set your budget goals to help limit your daily expenses.</string>
    <string name="savings_goal_description">Set your savings goals to help you save money in daily, weekly, or monthly.</string>
    <string name="add_savings_goal">Add Savings Goal</string>
    <string name="selection_mode">Selection Mode</string>
    <string name="selected_date">Selected Date</string>
    <string name="saving_goal_amount">Saving Goal Amount</string>
    <string name="amount_to_save">Enter the amount you want to save for each day on the selected range.</string>
    <string name="amount_to_budget">Enter the amount you want to budget for each day on the selected range.</string>
    <string name="list_of_saving_goals">List of Saving Goals</string>
    <string name="budget_goal_amount">Budget Goal Amount</string>
    <string name="add_budget_goal">Add Budget Goal</string>
    <string name="list_of_budget_goals">List of Budget Goals</string>
    <string name="here_is_a_list_of_your_budget_goals">Here is a list of your budget goals!</string>
    <string name="here_is_a_list_of_your_savings_goals">Here is a list of your savings goals!</string>
    <string name="here_you_can_cash_in_your_money_to_your_account">Here you can cash in your money to your account.</string>
    <string name="cash_out_amount">Cash Out Amount</string>
    <string name="here_you_can_cash_out_your_money">Here you can cash out your money!</string>
    <string name="total_savings">Total Savings</string>
    <string name="cash_in_amount">Cash In Amount</string>
    <string name="reason_for_cash_out">Reason for cash out</string>
    <string name="update">Update</string>
    <string name="chane_password">Change Password</string>
    <string name="input_the_current_password_and_the_new_password_below">Input the current password and the new password below.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="register_another_account">Register Another Account</string>
    <string name="want_to_cancel_the_changes_click_here">Want to cancel the changes? Click here!</string>
    <string name="transfer">Transfer</string>
    <string name="request_amount">Request Amount</string>
    <string name="transfer_money_to">Transferring money to</string>
    <string name="scan_the_qr_code_of_the_person_you_want_to_send_money_to">Scan the QR code of the person you want to send money to.</string>
    <string name="scan_this_qr_code_to_receive_money">Scan this QR code to receive money from other users.</string>
</resources>