<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main_termsAndConditions">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/ic_launcher_background"
                android:alpha="0.5"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_full"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="10dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_and_conditions"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                android:gravity="center"
                                android:padding="10dp"
                                android:textSize="22sp"/>



                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:text="@string/terms_welcome"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_1"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_1_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_2"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_2_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_3"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_3_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_4"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_4_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_5"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_5_content"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_6"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_6_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_7"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_7_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_8"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_8_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_9"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_9_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_10"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_10_content"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_11"
                                android:layout_marginTop="10dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:layout_gravity="start"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/terms_11_content"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_gravity="left"
                                android:layout_marginTop="25dp"
                                android:text="@string/terms_outro"/>

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="40dp" />


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </RelativeLayout>


                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-55dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:textAllCaps="true"
                    android:text="@string/back"
                    android:elevation="100dp"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="50dp" />
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>