<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/ic_launcher_background"
                android:alpha="0.5"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_full"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txtPhp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textFillColor"
                        android:text="@string/php"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp" />
                    <TextView
                        android:id="@+id/txtSavings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10,000.00"
                        android:textSize="45sp"
                        android:textColor="?attr/textFillColor"
                        android:fontFamily="sans-serif-black"
                        android:layout_gravity="center" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_savings" />



                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="0dp">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:columnCount="2"
                        android:padding="5dp"
                        android:rowCount="3">

                        <Button
                            android:id="@+id/btnCashIn"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="0"
                            android:layout_column="0"
                            app:icon="@drawable/receive"
                            app:iconGravity="textTop"
                            app:iconSize="30dp"
                            app:iconPadding="10dp"
                            app:cornerRadius="18dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/cash_in"
                            />

                        <Button
                            android:id="@+id/btnCashOut"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="0"
                            android:layout_column="1"
                            app:icon="@drawable/send"
                            app:iconGravity="textTop"
                            app:iconSize="30dp"
                            app:iconPadding="10dp"
                            app:cornerRadius="18dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/cash_out"/>

                        <Button
                            android:id="@+id/btnCalendarGoal"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="1"
                            android:layout_column="0"
                            app:icon="@drawable/piggy_bank"
                            app:iconGravity="textTop"
                            app:iconSize="35dp"
                            app:iconPadding="7dp"
                            app:cornerRadius="18dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/savings_goal"
                            />

                        <Button
                            android:id="@+id/btnBudgetGoal"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="1"
                            android:layout_column="1"
                            app:icon="@drawable/budget"
                            app:iconGravity="textTop"
                            app:iconSize="37dp"
                            app:iconPadding="5dp"
                            app:cornerRadius="18dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/budget_goal"/>

                        <Button
                            android:id="@+id/btnLock"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="2"
                            android:layout_column="0"
                            app:icon="@drawable/unlock"
                            app:iconGravity="textTop"
                            app:iconSize="30dp"
                            app:iconPadding="10dp"
                            app:cornerRadius="18dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/lock"
                            />

                        <Button
                            android:id="@+id/btnProfile"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_row="2"
                            android:layout_column="1"
                            app:icon="@drawable/profile"
                            app:iconGravity="textTop"
                            app:iconSize="30dp"
                            app:iconPadding="7dp"
                            app:cornerRadius="20dp"
                            style="@style/Widget.Material3.Button.IconButton"
                            android:text="@string/profile"/>



                    </GridLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:orientation="vertical">



                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>